--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/urbanist": "^5.0.21",
 		"@prismicio/client": "^7.6.0",
 		"@prismicio/svelte": "^1.2.0"
 	}
