--- a/package.json
+++ b/package.json
@@ -36,12 +36,17 @@
 		"typescript": "^5.4.5",
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"typescript-svelte-plugin": "^0.3.38",
+		"unplugin-icons": "^0.19.0",
 		"vite": "^5.3.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/urbanist": "^5.0.21",
 		"@prismicio/client": "^7.6.0",
-		"@prismicio/svelte": "^1.2.0"
+		"@prismicio/svelte": "^1.2.0",
+		"@threlte/core": "^7.3.1",
+		"@threlte/extras": "^8.11.5",
+		"gsap": "^3.12.5",
+		"three": "^0.166.1"
 	}
 }
