--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"slicemachine": "start-slicemachine"
 	},
 	"devDependencies": {
+		"@iconify-json/fa-brands": "^1.1.8",
+		"@iconify-json/simple-icons": "^1.1.110",
 		"@slicemachine/adapter-sveltekit": "^0.3.42",
 		"@sveltejs/adapter-auto": "^3.2.2",
 		"@sveltejs/kit": "^2.5.15",
