--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@prismicio/svelte": "^1.2.0",
 		"@threlte/core": "^7.3.1",
 		"@threlte/extras": "^8.11.5",
+		"clsx": "^2.1.1",
 		"gsap": "^3.12.5",
 		"three": "^0.166.1"
 	}
